--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "webpack 学习笔记",
   "main": "index.js",
   "scripts": {
+    "split:entry": "webpack --config ./split/entry/webpack.config.js",
+    "split:splitChunks": "webpack --config ./split/splitChunks/webpack.config.js",
+    "split:dynamicImport": "webpack --config ./split/dynamicImport/webpack.config.js",
     "tree-shaking": "webpack --config ./tree-shaking/default/webpack.config.js",
     "tree-shaking:usedExports": "webpack --config ./tree-shaking/usedExports/webpack.config.js",
     "tree-shaking:sideEffects": "webpack --config ./tree-shaking/sideEffects/webpack.config.js"
@@ -16,5 +19,8 @@
     "babel-loader": "^8.2.2",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
